<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding"
            android:textAlignment="viewStart">

            <TextView
                style="@style/TextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="inherit"
                android:text="@string/consentprecheck_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_padding"
                android:textColor="@color/text_white"
                android:textAlignment="inherit"
                android:text="@string/consentprecheck_subtitle_make_sure"
                android:textStyle="bold" />

            <TextView
                style="@style/CheckListItem"
                android:text="@string/consentprecheck_make_sure_item_1"
                android:textAlignment="inherit" />

            <TextView
                style="@style/CheckListItem"
                android:text="@string/consentprecheck_make_sure_item_2"
                android:textAlignment="inherit" />

            <TextView
                style="@style/CheckListItem"
                android:text="@string/consentprecheck_make_sure_item_3"
                android:textAlignment="inherit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_padding"
                android:textColor="@color/text_white"
                android:text="@string/consentprecheck_subtitle_dont_forget"
                android:textStyle="bold"
                android:textAlignment="inherit" />

            <TextView
                style="@style/CheckListItem"
                android:text="@string/consentprecheck_dont_forget_item_1"
                android:textAlignment="inherit" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>
    </ScrollView>

    <Button
        style="@style/Button"
        android:id="@+id/btnAddInformant"
        android:text="@string/consentprecheck_btn_add"
        android:layout_margin="@dimen/default_padding" />
</LinearLayout>
