<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/large_padding"
    android:paddingEnd="@dimen/large_padding"
    android:paddingBottom="@dimen/default_padding"
    tools:theme="@style/LightDialog"
    android:gravity="center">

    <Button
        android:id="@+id/btnDialogCreateNew"
        style="@style/Button"
        android:text="@string/addquestiondialog_btn_create" />

    <Button
        android:id="@+id/btnDialogAddExisting"
        style="@style/Button"
        android:text="@string/addquestiondialog_btn_select" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/Button.TextButton"
        android:text="@string/cancel" />

</LinearLayout>