<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light">

    <include layout="@layout/app_bar" android:id="@+id/app_bar"/>

    <LinearLayout
        android:id="@+id/buttonHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <Button
            android:id="@+id/btn_pin_code"
            style="@style/Button.White"
            android:text="@string/settings_item_reset_pin" />

        <Button
            android:id="@+id/btn_language_packs"
            style="@style/Button.White"
            android:text="@string/settings_item_language_packs" />

        <Button
            android:id="@+id/btnGuide"
            style="@style/Button.White"
            android:text="@string/settings_item_guide" />

        <Button
            android:id="@+id/btn_logout"
            style="@style/Button.White"
            android:text="@string/settings_item_logout" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textAppVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/text_light"
            tools:text="Version 0.0.1" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
