<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginTop="@dimen/small_padding"
    android:foreground="?selectableItemBackground"
    app:cardBackgroundColor="@color/card_background"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_marginEnd="@dimen/small_padding"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/skippedText"
                style="@style/TextIcon"
                android:text="@string/interviewoverview_item_label_skipped"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/flaggedText"
                style="@style/TextIcon"
                android:background="@drawable/rounded_rect_background_danger"
                android:text="@string/interviewoverview_item_label_flagged"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/probingText"
                style="@style/TextIcon"
                android:background="@drawable/rounded_rect_background_info"
                android:text="@string/interviewoverview_item_label_probing"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/starredText"
                style="@style/TextIcon"
                android:background="@drawable/rounded_rect_background_starred"
                android:text="@string/interviewoverview_item_label_starred"
                tools:visibility="visible"/>

        </LinearLayout>

        <TextView
            style="@style/Text.Larger"
            android:id="@+id/questionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_marginBottom="@dimen/small_padding"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_marginEnd="@dimen/small_padding"
            android:textColor="@color/text_dark"
            android:textAlignment="viewStart"
            android:fontFamily="sans-serif-medium"
            android:textSize="18sp"
            tools:text="What changes have you or the community experienced since the crisis?" />

        <TextView
            style="@style/Button.TextButton"
            android:id="@+id/btnFlag"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_text_button"
            android:drawablePadding="@dimen/small_padding"
            android:fontFamily="sans-serif-medium"
            android:text="@string/interviewoverview_item_btn_flag"
            app:drawableStartCompat="@drawable/ic_flag"
            app:drawableTint="@color/colorAccent" />

        <TextView
            style="@style/Button.TextButton"
            android:id="@+id/btnStar"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_text_button"
            android:drawablePadding="@dimen/small_padding"
            android:fontFamily="sans-serif-medium"
            android:text="@string/interviewoverview_item_btn_star"
            app:drawableStartCompat="@drawable/ic_star_filled"
            app:drawableTint="@color/colorAccent" />

        <TextView
            style="@style/Button.TextButton"
            android:id="@+id/btnRetake"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_text_button"
            android:drawablePadding="@dimen/small_padding"
            android:fontFamily="sans-serif-medium"
            android:text="@string/interviewoverview_item_btn_retake"
            app:drawableStartCompat="@drawable/ic_retake"
            app:drawableTint="@color/colorAccent" />

        <TextView
            style="@style/Button.TextButton"
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_text_button"
            android:drawablePadding="@dimen/small_padding"
            android:fontFamily="sans-serif-medium"
            android:text="@string/interviewoverview_item_btn_remove"
            app:drawableStartCompat="@drawable/ic_baseline_clear"
            app:drawableTint="@color/colorAccent" />
    </LinearLayout>
</androidx.cardview.widget.CardView>