<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/top_title_margin"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        android:textAlignment="viewStart">

        <TextView
            style="@style/TextTitle"
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="inherit"
            android:text="@string/login_title" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextInputLayoutStyle"
            android:id="@+id/emailLayout"
            android:hint="@string/login_email_hint"
            android:textAlignment="viewStart">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditText"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:textAlignment="inherit" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextInputLayoutStyle"
            android:id="@+id/passwordLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            android:hint="@string/login_password_hint"
            android:textAlignment="viewStart">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditText"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:textAlignment="inherit" />
        </com.google.android.material.textfield.TextInputLayout>

        <View style="@style/Divider" android:id="@+id/divider"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_login"
            style="@style/Button"
            android:text="@string/login_btn_login" />

        <Button
            android:id="@+id/btn_reset_password"
            style="@style/Button.TextButton"
            tools:text="@string/login_btn_forgot_password" />

    </LinearLayout>

    <include layout="@layout/layout_progress" android:id="@+id/progressLayout"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
