<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <TextView
                style="@style/TextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="74dp"
                android:layout_marginBottom="4dp"
                android:textAlignment="inherit"
                android:text="@string/whatsnew_heading" />

            <TextView
                android:id="@+id/txtVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                tools:text="1.2.3" />

            <View
                style="@style/Divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:text="@string/whatsnew_subtitle"
                android:textColor="@color/text_white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/whatsnew_changelog"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnDone"
        style="@style/Button"
        android:layout_margin="@dimen/default_padding"
        android:text="@string/whatsnew_btn_done" />
</LinearLayout>