<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <TextView
                style="@style/TextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skiplogicinfo_fragment_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textSize="16sp"
                android:text="@string/skiplogicinfo_fragment_blurb" />
        </LinearLayout>
    </ScrollView>

    <Button
        style="@style/Button"
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_padding"
        android:text="@string/skiplogicinfo_fragment_btn_start" />
</LinearLayout>